--- a/index.html
+++ b/index.html
@@ -119,13 +119,13 @@
 const config = {
   clientId: "1892e1b0-6724-4cfe-b0aa-83d746e755e8",
   tenantId: "f6fbd66a-02b9-4804-8f74-b16600cf5e00",
-  redirectUri: "http://localhost:5500/",
+  redirectUri: "https://jpardo20.github.io/preavaluacio/",
   refsFilePath: "/tutoria/Preavaluacio/referencies.xlsx",
   resFilePath:  "/tutoria/Preavaluacio/preavaluacio_dades.xlsx",
   refsTables: { alumnes: "Alumnes", assign: "Assignacions" },
   resTableName: "Respostes",
   useSharePointSite: false,
-  sharePoint: { hostname: "contoso.sharepoint.com", sitePath: "/sites/ElMeuSite" }
+  sharePoint: { hostname: "https://gmqualitytechnologysl365.sharepoint.com", sitePath: "/sites/DIGITECHBarcelona/SitePages/" }
 };
 
 const msalConfig = {
