--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
     .wrap{max-width:900px;margin:-64px auto 32px;padding:0 16px}
     .card{background:var(--card);border:1px solid var(--bd);border-radius:14px;box-shadow:var(--shadow);padding:18px}
     .muted{color:var(--muted)}
+    .topbar{display:flex;justify-content:space-between;align-items:center;gap:12px;margin-bottom:8px}
+    .sessio{display:flex;align-items:center;gap:10px}
+    .logout{background:#fff;border:1px solid var(--bd);border-radius:10px;padding:8px 12px;cursor:pointer}
+    .logout:hover{background:#f8f9fb}
 
     /* PROGRESS */
     .progress{position:relative;background:#eef2ff;border-radius:999px;height:12px;overflow:hidden}
@@ -73,11 +77,18 @@
   <!-- App (Pas 1: selecció) -->
   <div class="wrap hidden" id="app">
     <div class="card">
-      <div class="progress" aria-hidden="true"><div class="bar" id="topBar" style="--pct:10"></div></div>
-      <div class="progress-label" id="topLabel">Pàgina 1 de 10</div>
+      <div class="topbar">
+        <div style="flex:1">
+          <div class="progress" aria-hidden="true"><div class="bar" id="topBar" style="--pct:10"></div></div>
+          <div class="progress-label" id="topLabel">Pàgina 1 de 10</div>
+        </div>
+        <div class="sessio">
+          <span class="muted" id="whoami">No autenticat</span>
+          <button class="logout" id="btnLogout" title="Tanca la sessió">Tanca sessió</button>
+        </div>
+      </div>
 
-      <h2 style="margin:14px 0 6px">Selecció inicial</h2>
-      <p class="muted" id="whoami">No autenticat</p>
+      <h2 style="margin:6px 0 6px">Selecció inicial</h2>
 
       <fieldset>
         <legend>Tria alumne i mòdul</legend>
@@ -109,13 +120,6 @@
 
 <script>
 /* ====== CONFIG ====== */
-/* IMPORTANT (Redirect URI):
-   - A GitHub Pages, això acostuma a ser la URL exacta de la pàgina:
-     https://<usuari>.github.io/<repo>/                  (si uses index.html)
-     https://<usuari>.github.io/<repo>/preavaluacio.html (si mantens el fitxer)
-   - El codi d'avall intenta deduir-la a partir del path actual,
-     però assegura't que la URL que posis aquí i la que tens a Azure coincideixen al mil·límetre.
-*/
 const path = window.location.pathname.endsWith(".html")
   ? window.location.pathname
   : (window.location.pathname.endsWith("/") ? window.location.pathname : window.location.pathname + "/");
@@ -124,11 +128,9 @@ const redirectGuess = window.location.origin + path;
 const config = {
   clientId: "1892e1b0-6724-4cfe-b0aa-83d746e755e8",
   tenantId: "f6fbd66a-02b9-4804-8f74-b16600cf5e00",
-  redirectUri: redirectGuess, // <— si cal, sobreescriu amb la teva URL exacta
-  // Si els fitxers són a SharePoint (site compartit), posa useSharePointSite:true i omple hostname + sitePath
+  redirectUri: redirectGuess,
   useSharePointSite: false,
   sharePoint: { hostname: "ELTEUTENANT.sharepoint.com", sitePath: "/sites/ElMeuSite" },
-  // Rutes dels Excels
   refsFilePath: "/tutoria/Preavaluacio/referencies.xlsx",
   refsTables: { alumnes: "Alumnes", assign: "Assignacions" }
 };
@@ -160,6 +162,19 @@ let currentUserEmail = null;
 let alumnes=[], assignacions=[];
 
 function log(msg, cls="muted"){ const el=$("status"); el.className=cls; el.textContent=msg; }
+function resetUI(){
+  $("app").classList.add("hidden");
+  $("hero").classList.remove("hidden");
+  $("whoami").textContent = "No autenticat";
+  $("alumneSel").innerHTML = "";
+  $("modulSel").innerHTML = "";
+  $("chipAlumne").textContent = "Alumne: —";
+  $("chipModul").textContent  = "Mòdul: —";
+  $("btnContinue").disabled = true;
+  currentUserEmail = null;
+  setProgress(1);
+  log("");
+}
 
 async function getToken(){
   const req={ account: msalApp.getAllAccounts()[0], scopes: graphScopes };
@@ -267,11 +282,22 @@ async function start(){
   }
 }
 
+async function logout(){
+  try{
+    const acc = msalApp.getAllAccounts()[0];
+    await msalApp.logoutPopup({ account: acc, postLogoutRedirectUri: config.redirectUri });
+  }catch(e){
+    console.warn("logoutPopup va fallar, netejo UI igualment", e);
+  }finally{
+    resetUI();
+  }
+}
+
 $("btnStart").addEventListener("click", start);
 $("btnContinue").addEventListener("click", ()=>{
-  // Placeholder per a la següent pantalla
   alert("Perfecte! Selecció guardada.\n(Quan vulguis, afegim la resta de passos.)");
 });
+$("btnLogout").addEventListener("click", logout);
 
 // Si ja hi ha sessió oberta, entra directe
 msalApp.handleRedirectPromise().then(async ()=>{
