esborrada barre de progres de l'inici

--- a/index.html
+++ b/index.html
@@ -17,27 +17,30 @@
     a{color:var(--primary)}
     .hidden{display:none!important}
 
-    /* HERO */
+    /* HERO (pre-login) */
     .hero{position:relative;min-height:82vh;display:grid;place-items:center;padding:24px;
       background:linear-gradient(120deg,#0e6efd 0%, #34b3ff 100%);color:#fff;overflow:hidden}
-    .hero .container{max-width:980px;display:grid;grid-template-columns:1.2fr 1fr;gap:28px;align-items:center}
+    .hero .container{max-width:980px;display:grid;grid-template-columns:1fr;gap:28px;align-items:center}
     .hero h1{margin:0 0 6px;font-size:clamp(28px,5vw,54px);line-height:1.05;text-shadow:0 6px 22px rgba(0,0,0,.18)}
     .hero p{margin:.2rem 0 1.4rem;font-size:clamp(16px,2.5vw,19px);opacity:.95}
-    .hero .card{background:rgba(255,255,255,.1);border:1px solid rgba(255,255,255,.35);border-radius:16px;padding:18px;backdrop-filter:blur(4px)}
     .hero .cta{display:inline-flex;align-items:center;gap:10px;padding:12px 18px;border-radius:12px;background:#fff;color:#0b57d0;border:0;cursor:pointer;font-weight:600;box-shadow:var(--shadow)}
     .hero .cta:focus{outline:none;box-shadow:var(--focus)}
     .hero small{opacity:.85}
 
-    /* APP */
-    .wrap{max-width:900px;margin:-64px auto 32px;padding:0 16px}
-    .card{background:var(--card);border:1px solid var(--bd);border-radius:14px;box-shadow:var(--shadow);padding:18px}
-    .muted{color:var(--muted)}
-    .topbar{display:flex;justify-content:space-between;align-items:center;gap:12px;margin-bottom:8px}
-    .sessio{display:flex;align-items:center;gap:10px}
+    /* APP BAR (post-login) */
+    .appbar{position:sticky;top:0;z-index:50;background:#ffffffd9;backdrop-filter:blur(6px);
+      border-bottom:1px solid var(--bd);box-shadow:0 6px 18px rgba(16,24,40,.06)}
+    .appbar-inner{max-width:980px;margin:0 auto;display:flex;align-items:center;justify-content:space-between;padding:10px 16px}
+    .who{color:#334155;font-size:14px}
     .logout{background:#fff;border:1px solid var(--bd);border-radius:10px;padding:8px 12px;cursor:pointer}
     .logout:hover{background:#f8f9fb}
 
-    /* PROGRESS */
+    /* APP */
+    .wrap{max-width:900px;margin:24px auto 32px;padding:0 16px}
+    .card{background:var(--card);border:1px solid var(--bd);border-radius:14px;box-shadow:var(--shadow);padding:18px}
+    .muted{color:var(--muted)}
+
+    /* PROGRESS (only inside app) */
     .progress{position:relative;background:#eef2ff;border-radius:999px;height:12px;overflow:hidden}
     .progress>.bar{height:100%;width:calc(var(--pct,0)*1%);background:linear-gradient(90deg,#0e6efd,#34b3ff);transition:width .35s ease}
     .progress-label{margin-top:8px;font-size:12px;color:var(--muted)}
@@ -57,7 +60,7 @@
 </head>
 <body>
 
-  <!-- Portada -->
+  <!-- Portada (sense barra de progrés) -->
   <section class="hero" id="hero">
     <div class="container">
       <div>
@@ -66,29 +69,26 @@
         <button id="btnStart" class="cta">Inicia ara</button>
         <p class="muted"><small>Cal compte del centre (Microsoft 365).</small></p>
       </div>
-      <div class="card">
-        <p style="margin:.2rem 0 .6rem;font-weight:600">Progrés de la resposta</p>
-        <div class="progress" aria-hidden="true"><div class="bar" id="heroBar" style="--pct:10"></div></div>
-        <div class="progress-label" id="heroLabel">Pàgina 1 de 10</div>
-      </div>
     </div>
   </section>
+
+  <!-- Barra superior amb email + Tanca sessió (només post-login) -->
+  <div class="appbar hidden" id="appbar">
+    <div class="appbar-inner">
+      <span class="who" id="whoami">—</span>
+      <button class="logout" id="btnLogout" title="Tanca la sessió">Tanca sessió</button>
+    </div>
+  </div>
 
   <!-- App (Pas 1: selecció) -->
   <div class="wrap hidden" id="app">
     <div class="card">
-      <div class="topbar">
-        <div style="flex:1">
-          <div class="progress" aria-hidden="true"><div class="bar" id="topBar" style="--pct:10"></div></div>
-          <div class="progress-label" id="topLabel">Pàgina 1 de 10</div>
-        </div>
-        <div class="sessio">
-          <span class="muted" id="whoami">No autenticat</span>
-          <button class="logout" id="btnLogout" title="Tanca la sessió">Tanca sessió</button>
-        </div>
+      <div>
+        <div class="progress" aria-hidden="true"><div class="bar" id="topBar" style="--pct:10"></div></div>
+        <div class="progress-label" id="topLabel">Pàgina 1 de 10</div>
       </div>
 
-      <h2 style="margin:6px 0 6px">Selecció inicial</h2>
+      <h2 style="margin:14px 0 6px">Selecció inicial</h2>
 
       <fieldset>
         <legend>Tria alumne i mòdul</legend>
@@ -151,9 +151,7 @@ const msalApp = new msal.PublicClientApplication(msalConfig);
 const $ = (id)=>document.getElementById(id);
 const setProgress = (step)=>{
   const pct = Math.max(1, Math.min(PROG_TOTAL, step)) / PROG_TOTAL * 100;
-  $("heroBar").style.setProperty("--pct", pct);
   $("topBar").style.setProperty("--pct", pct);
-  $("heroLabel").textContent = `Pàgina ${step} de ${PROG_TOTAL}`;
   $("topLabel").textContent  = `Pàgina ${step} de ${PROG_TOTAL}`;
 };
 setProgress(1);
@@ -164,8 +162,9 @@ let alumnes=[], assignacions=[];
 function log(msg, cls="muted"){ const el=$("status"); el.className=cls; el.textContent=msg; }
 function resetUI(){
   $("app").classList.add("hidden");
+  $("appbar").classList.add("hidden");
   $("hero").classList.remove("hidden");
-  $("whoami").textContent = "No autenticat";
+  $("whoami").textContent = "—";
   $("alumneSel").innerHTML = "";
   $("modulSel").innerHTML = "";
   $("chipAlumne").textContent = "Alumne: —";
@@ -273,6 +272,7 @@ async function start(){
     currentUserEmail = (res.account.username||"").toLowerCase();
     $("whoami").textContent = currentUserEmail;
     $("hero").classList.add("hidden");
+    $("appbar").classList.remove("hidden");
     $("app").classList.remove("hidden");
     await initData();
   }catch(e){
@@ -306,6 +306,7 @@ msalApp.handleRedirectPromise().then(async ()=>{
     currentUserEmail = (acc.username||"").toLowerCase();
     $("whoami").textContent = currentUserEmail;
     $("hero").classList.add("hidden");
+    $("appbar").classList.remove("hidden");
     $("app").classList.remove("hidden");
     await initData();
   }
