--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
     *{box-sizing:border-box}
     body{margin:0;font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;background:var(--bg);color:var(--text);}
     a{color:var(--primary)} .hidden{display:none!important}
-    /* HERO */
     .hero{position:relative;min-height:82vh;display:grid;place-items:center;padding:24px;
       background:linear-gradient(120deg,#0e6efd 0%, #34b3ff 100%);color:#fff;overflow:hidden}
     .hero .container{max-width:980px;display:grid;grid-template-columns:1fr;gap:28px;align-items:center}
@@ -24,22 +23,18 @@
     .hero .cta{display:inline-flex;align-items:center;gap:10px;padding:12px 18px;border-radius:12px;background:#fff;color:#0b57d0;border:0;cursor:pointer;font-weight:600;box-shadow:var(--shadow)}
     .hero .cta:focus{outline:none;box-shadow:var(--focus)}
     .hero small{opacity:.85}
-    /* APP BAR */
     .appbar{position:sticky;top:0;z-index:50;background:#ffffffd9;backdrop-filter:blur(6px);
       border-bottom:1px solid var(--bd);box-shadow:0 6px 18px rgba(16,24,40,.06)}
     .appbar-inner{max-width:980px;margin:0 auto;display:flex;align-items:center;justify-content:space-between;padding:10px 16px}
     .who{color:#334155;font-size:14px}
     .logout{background:#fff;border:1px solid var(--bd);border-radius:10px;padding:8px 12px;cursor:pointer}
     .logout:hover{background:#f8f9fb}
-    /* APP */
     .wrap{max-width:900px;margin:24px auto 32px;padding:0 16px}
     .card{background:var(--card);border:1px solid var(--bd);border-radius:14px;box-shadow:var(--shadow);padding:18px}
     .muted{color:var(--muted)}
-    /* PROGRESS */
     .progress{position:relative;background:#eef2ff;border-radius:999px;height:12px;overflow:hidden}
     .progress>.bar{height:100%;width:calc(var(--pct,0)*1%);background:linear-gradient(90deg,#0e6efd,#34b3ff);transition:width .35s ease}
     .progress-label{margin-top:8px;font-size:12px;color:var(--muted)}
-    /* FORM */
     fieldset{border:1px solid var(--bd);border-radius:12px;padding:14px;margin:14px 0}
     legend{padding:0 6px} label{display:block;font-weight:600;margin:8px 0 6px}
     select{width:100%;padding:10px 12px;border:1px solid #cfd4dc;border-radius:10px;background:#fff}
@@ -132,16 +127,14 @@ const path = window.location.pathname.endsWith(".html")
 const redirectGuess = window.location.origin + path;
 
 const config = {
-  // MSAL
   clientId: "1892e1b0-6724-4cfe-b0aa-83d746e755e8",
   tenantId: "f6fbd66a-02b9-4804-8f74-b16600cf5e00",
   redirectUri: redirectGuess,
 
-  // 📌 POSA AQUÍ L’ENLLAÇ COMPARTIT DEL TEU EXCEL (OneDrive)
-  //    Has dit: https://gmqualitytechnologysl365-my.sharepoint.com/:x:/g/personal/jpardo20_digitechfp_com/Xxxxxxxxxxxxxxxxxxxxxxxxxxx?e=xCr8B7
-  sharedLink: "https://gmqualitytechnologysl365-my.sharepoint.com/:x:/g/personal/jpardo20_digitechfp_com/IQCjtGM5iqDARr3Fh1LpzsB6AYE049kU-pr-WRdIIhaEA5g?e=xCr8B7",
+  // ENLLAÇ COMPARTIT DEL TEU EXCEL (OneDrive, “Anyone in org with link can edit/view”)
+    sharedLink: "https://gmqualitytechnologysl365-my.sharepoint.com/:x:/g/personal/jpardo20_digitechfp_com/IQCjtGM5iqDARr3Fh1LpzsB6AYE049kU-pr-WRdIIhaEA5g?e=xCr8B7",
 
-  // Noms de taules a l’Excel
+
   refsTables: { alumnes: "Alumnes", assign: "Assignacions" }
 };
 const PROG_TOTAL = 10;
@@ -155,9 +148,9 @@ const msalConfig = {
   },
   cache: { cacheLocation: "localStorage", storeAuthStateInCookie: false }
 };
-const graphScopes = ["User.Read","Files.ReadWrite"];
-const msalApp = new msal.PublicClientApplication(msalConfig);
+const graphScopes = ["User.Read","Files.ReadWrite"]; // prou per a enllaç compartit
 
+const msalApp = new msal.PublicClientApplication(msalConfig);
 const $ = (id)=>document.getElementById(id);
 const setProgress = (step)=>{
   const pct = Math.max(1, Math.min(PROG_TOTAL, step)) / PROG_TOTAL * 100;
@@ -168,48 +161,21 @@ setProgress(1);
 
 let currentUserEmail = null;
 let alumnes=[], assignacions=[];
-let workbookSessionId = null; // workbook-session-id header
+let workbookSessionId = null;
+let driveBase = null; // https://graph.microsoft.com/v1.0/drives/{driveId}/items/{itemId}
 
-function showStep(n){
-  $("step1").classList.toggle("hidden", n!==1);
-  $("step2").classList.toggle("hidden", n!==2);
-  setProgress(n);
-}
+/* ===== UI helpers ===== */
+function showStep(n){ $("step1").classList.toggle("hidden", n!==1); $("step2").classList.toggle("hidden", n!==2); setProgress(n); }
 function resetUI(){
-  $("app").classList.add("hidden");
-  $("appbar").classList.add("hidden");
-  $("hero").classList.remove("hidden");
-  $("whoami").textContent = "—";
-  $("alumneSel").innerHTML = "";
-  $("modulSel").innerHTML = "";
-  $("chipAlumne").textContent = "Alumne: —";
-  $("chipAlumne2").textContent = "Alumne: —";
-  $("chipModul").textContent  = "Mòdul: —";
-  $("goStep2").disabled = true;
-  $("btnContinue").disabled = true;
-  workbookSessionId = null;
-  showStep(1);
-  setProgress(1);
-  statusMsg("");
+  $("app").classList.add("hidden"); $("appbar").classList.add("hidden"); $("hero").classList.remove("hidden");
+  $("whoami").textContent = "—"; $("alumneSel").innerHTML = ""; $("modulSel").innerHTML = "";
+  $("chipAlumne").textContent = "Alumne: —"; $("chipAlumne2").textContent = "Alumne: —"; $("chipModul").textContent = "Mòdul: —";
+  $("goStep2").disabled = true; $("btnContinue").disabled = true; workbookSessionId = null; driveBase = null; showStep(1); setProgress(1); statusMsg("");
 }
-function statusMsg(msg, where="status1", cls="muted"){
-  const el = $(where);
-  if(!el) return;
-  el.className = cls + " toast";
-  el.textContent = msg || "";
-}
+function statusMsg(msg, where="status1", cls="muted"){ const el = $(where); if(!el) return; el.className = cls + " toast"; el.textContent = msg || ""; }
 
-/* ===== Graph helpers (Shared Link) ===== */
-function base64UrlEncode(str){
-  // Graph vol Base64 URL-safe i sense '='
-  const b64 = btoa(str).replace(/\+/g,'-').replace(/\//g,'_').replace(/=+$/,'');
-  return b64;
-}
-function sharedDriveItemUrlFromLink(sharedLink){
-  // https://graph.microsoft.com/v1.0/shares/u!<BASE64URL>/driveItem
-  const enc = base64UrlEncode(sharedLink);
-  return `https://graph.microsoft.com/v1.0/shares/u!${enc}/driveItem`;
-}
+/* ===== Graph helpers ===== */
+function base64UrlEncode(str){ return btoa(str).replace(/\+/g,'-').replace(/\//g,'_').replace(/=+$/,''); }
 async function getToken(){
   const req={ account: msalApp.getAllAccounts()[0], scopes: graphScopes };
   try{ return (await msalApp.acquireTokenSilent(req)).accessToken; }
@@ -217,22 +183,12 @@ async function getToken(){
 }
 async function gfetch(url,opts={}, useWorkbookHeader=true){
   const token=await getToken();
-  const headers = {
-    "Authorization":`Bearer ${token}`,
-    "Content-Type":"application/json",
-    ...(opts.headers||{})
-  };
-  if(useWorkbookHeader && workbookSessionId){
-    headers["workbook-session-id"] = workbookSessionId;
-  }
+  const headers = { "Authorization":`Bearer ${token}`, "Content-Type":"application/json", ...(opts.headers||{}) };
+  if(useWorkbookHeader && workbookSessionId){ headers["workbook-session-id"] = workbookSessionId; }
   const r=await fetch(url,{...opts,headers});
   if(!r.ok){
-    let detail = "";
-    try{ detail = await r.text(); }catch{}
-    const error = new Error(`HTTP ${r.status} ${r.statusText} :: ${detail}`);
-    error.status = r.status;
-    error.body = detail;
-    throw error;
+    let detail = ""; try{ detail = await r.text(); }catch{}
+    const error = new Error(`HTTP ${r.status} ${r.statusText} :: ${detail}`); error.status = r.status; error.body = detail; throw error;
   }
   if(r.status===204) return null;
   return r.json();
@@ -242,49 +198,48 @@ function niceGraphError(e){
   try{
     const body = JSON.parse(e.body || "{}");
     if(body && body.error){
-      const code = body.error.code || "";
-      const message = body.error.message || msg;
-      if(e.status===404 || /ItemNotFound/i.test(code)){
-        msg = "No trobo el fitxer d'origen (404). Revisa l'enllaç compartit o els permisos.";
-      }else if(e.status===403 || /accessDenied/i.test(code)){
-        msg = "No tens permisos per accedir al fitxer (403). Revisa la configuració de l'enllaç.";
-      }else if(e.status===423 || /Locked/i.test(code)){
-        msg = "El fitxer està en ús (423). Si algú l'està editant a Excel, tanca'l i torna-ho a provar.";
-      }else{
-        msg = message;
-      }
+      const code = body.error.code || ""; const message = body.error.message || msg;
+      if(e.status===404 || /ItemNotFound/i.test(code)){ msg = "No trobo el fitxer d'origen (404). Revisa l'enllaç compartit o els permisos."; }
+      else if(e.status===403 || /accessDenied/i.test(code)){ msg = "No tens permisos per accedir al fitxer (403). Revisa la configuració de l'enllaç."; }
+      else if(e.status===423 || /Locked/i.test(code)){ msg = "El fitxer està en ús (423). Tanca l'Excel i torna-ho a provar."; }
+      else { msg = message; }
     }
   }catch{}
   return msg;
 }
 
-/* ===== Workbook (session) ===== */
-async function ensureWorkbookSession(fileDriveItemUrl){
+/* ===== Resolve shared link to /drives/{id}/items/{id} (AAD safe) ===== */
+async function resolveSharedLinkBase(sharedLink){
+  const enc = base64UrlEncode(sharedLink);
+  const info = await gfetch(`https://graph.microsoft.com/v1.0/shares/u!${enc}/driveItem?$select=id,name,parentReference`,
+    { method:"GET" }, false);
+  const itemId = info.id;
+  const driveId = info.parentReference && (info.parentReference.driveId || info.parentReference.id);
+  if(!itemId || !driveId) throw new Error("No he pogut resoldre driveId/itemId des de l'enllaç compartit.");
+  return `https://graph.microsoft.com/v1.0/drives/${driveId}/items/${itemId}`;
+}
+
+/* ===== Workbook helpers ===== */
+async function ensureWorkbookSession(){
   if(workbookSessionId) return workbookSessionId;
+  if(!driveBase) throw new Error("driveBase no inicialitzat.");
   try{
-    const s = await gfetch(`${fileDriveItemUrl}/workbook/createSession`, {
-      method:"POST",
-      body: JSON.stringify({persistChanges:false})
-    }, false);
-    workbookSessionId = s.id;
-    return workbookSessionId;
+    const s = await gfetch(`${driveBase}/workbook/createSession`, { method:"POST", body: JSON.stringify({persistChanges:false}) }, false);
+    workbookSessionId = s.id; return workbookSessionId;
   }catch(e){
     console.warn("No s'ha pogut crear la sessió de workbook:", e);
-    workbookSessionId = null; // continuem sense sessió
-    return null;
+    workbookSessionId = null; return null;
   }
 }
-async function loadTableRows_sharedLink(sharedLink, tableName){
-  const fileUrl = sharedDriveItemUrlFromLink(sharedLink);
-  await ensureWorkbookSession(fileUrl);
-  const cols = await gfetch(`${fileUrl}/workbook/tables/${encodeURIComponent(tableName)}/columns`);
+async function loadTableRows(tableName){
+  if(!driveBase) throw new Error("driveBase no inicialitzat.");
+  await ensureWorkbookSession();
+  const cols = await gfetch(`${driveBase}/workbook/tables/${encodeURIComponent(tableName)}/columns`);
   const colNames = cols.value.map(c=>c.name);
-  const rows = await gfetch(`${fileUrl}/workbook/tables/${encodeURIComponent(tableName)}/rows`);
+  const rows = await gfetch(`${driveBase}/workbook/tables/${encodeURIComponent(tableName)}/rows`);
   return { colNames, rows: rows.value.map(r=>r.values[0]) };
 }
-function requireColumns(actual, required, tableName){
-  for(const c of required) if(!actual.includes(c)) throw new Error(`Falta la columna "${c}" a la taula ${tableName}.`);
-}
+function requireColumns(actual, required, tableName){ for(const c of required) if(!actual.includes(c)) throw new Error(`Falta la columna "${c}" a la taula ${tableName}.`); }
 
 /* ===== Dades i UI ===== */
 function updateChips(){
@@ -321,13 +276,15 @@ function rebuildModulsForAlumne(){
 
 async function initData(){
   try{
+    statusMsg("Resoldre enllaç compartit…","status1");
+    driveBase = await resolveSharedLinkBase(config.sharedLink); // AAD compatible
     statusMsg("Carregant llistes d'Excel…","status1");
-    const A = await loadTableRows_sharedLink(config.sharedLink, config.refsTables.alumnes);
+    const A = await loadTableRows(config.refsTables.alumnes);
     requireColumns(A.colNames, ["course","group","student_id","student_name","student_email"], "Alumnes");
     const ia=Object.fromEntries(A.colNames.map((n,i)=>[n,i]));
     alumnes=A.rows.map(v=>({course:v[ia.course],group:v[ia.group],student_id:v[ia.student_id],student_name:v[ia.student_name],student_email:v[ia.student_email]}));
 
-    const S = await loadTableRows_sharedLink(config.sharedLink, config.refsTables.assign);
+    const S = await loadTableRows(config.refsTables.assign);
     requireColumns(S.colNames, ["course","group","module_code","module_name","prof_email"], "Assignacions");
     const is=Object.fromEntries(S.colNames.map((n,i)=>[n,i]));
     assignacions=S.rows.map(v=>({course:v[is.course],group:v[is.group],module_code:v[is.module_code],module_name:v[is.module_name],prof_email:v[is.prof_email]}));
@@ -337,8 +294,9 @@ async function initData(){
     statusMsg("Llistes carregades.","status1","ok");
   }catch(e){
     console.error(e);
-    statusMsg(niceGraphError(e),"status1","err");
-    alert("Error carregant dades: " + niceGraphError(e));
+    const msg = niceGraphError(e);
+    statusMsg(msg,"status1","err");
+    alert("Error carregant dades: " + msg);
   }
 }
 
@@ -374,21 +332,13 @@ async function logout(){
 /* ===== Events ===== */
 $("btnStart").addEventListener("click", start);
 $("btnLogout").addEventListener("click", logout);
-$("alumneSel").addEventListener("change", ()=>{
-  updateChips();
-  $("goStep2").disabled = $("alumneSel").selectedIndex<0;
-});
+$("alumneSel").addEventListener("change", ()=>{ updateChips(); $("goStep2").disabled = $("alumneSel").selectedIndex<0; });
 $("goStep2").addEventListener("click", ()=>{ rebuildModulsForAlumne(); showStep(2); });
 $("backStep1").addEventListener("click", ()=>{ showStep(1); });
-$("modulSel").addEventListener("change", ()=>{
-  $("btnContinue").disabled = $("modulSel").selectedIndex<0;
-  updateChips();
-});
-$("btnContinue").addEventListener("click", ()=>{
-  alert("Perfecte! Selecció guardada.\n(Quan vulguis, afegim la resta de passos.)");
-});
+$("modulSel").addEventListener("change", ()=>{ $("btnContinue").disabled = $("modulSel").selectedIndex<0; updateChips(); });
+$("btnContinue").addEventListener("click", ()=>{ alert("Perfecte! Selecció guardada.\n(Quan vulguis, afegim la resta de passos.)"); });
 
-// Autologin si hi ha sessió
+// Autologin
 msalApp.handleRedirectPromise().then(async ()=>{
   const acc=msalApp.getAllAccounts()[0];
   if(acc){
